# MIPI_Robot

./: .gitignore  CMakeLists.txt  MIPIRobot_NEO.code-workspace  compile_commands.json  sdkconfig  sdkconfig.defaults.esp32s3  sdkconfig.old
.cache/clangd/index/: BLDCDriver.h.6B5E903F1B0B79CD.idx  BLDCMotor.cpp.22A5B0ED00934980.idx  BLDCMotor.h.E677214CEB48BBC3.idx  Commander.cpp.7721DF16C3A31253.idx  Commander.h.B14CC5BC4331B55D.idx  CurrentSense.cpp.8B4205E0B23D9962.idx  CurrentSense.h.0C399425DF74386A.idx  Encoder.cpp.F38BAAC709E08867.idx  Encoder.h.6CD6DF1A494454E4.idx  FOCMotor.cpp.7D66D92F1D12BC4B.idx  FOCMotor.h.00CB3A9D50C7C0FB.idx  GenericCurrentSense.cpp.4332DF25C2C1BE6F.idx  GenericCurrentSense.h.C92F9B1486B07B84.idx  GenericSensor.cpp.33A871B800D6E461.idx  GenericSensor.h.BE64429C4F1C09EF.idx  HallSensor.cpp.C63664A007893924.idx  HallSensor.h.51E1D8E78207265A.idx  IQmathLib.h.4EEC671212AC3EA8.idx  LowsideCurrentSense.cpp.BCC87CB0029D19E8.idx  LowsideCurrentSense.h.5CEA69433554B8F6.idx  RTS_support.h.2C63CC7DFF728567.idx  Sensor.cpp.D68B1F7E9CD1EB70.idx  Sensor.h.3FF244FA90EC8565.idx  SimpleFOCDebug.cpp.EDE631DE5C2C57C3.idx  SimpleFOCDebug.h.36BCA987DB80CF79.idx  _IQNasin_acos.c.EA3BF4DBC2809BD5.idx  _IQNatan2.c.568FF85652C55238.idx  _IQNdiv.c.6488027290E3E9E2.idx  _IQNdiv.h.EDCDCE374250017F.idx  _IQNexp.c.777BBAE5834A7930.idx  _IQNfrac.c.C2ADD86690B0BDB7.idx  _IQNlog.c.686BCBB3DE6CDA25.idx  _IQNmpy.c.D9656F6C75FC75A0.idx  (+351 more)
main/: CMakeLists.txt  idf_component.yml  main.c
main/include/: app_config.h  as5600.h  bldc_control.h  cas5600.h  led_control.h  mpu9250.h  mpu9250_control.h  mpu9250_idf.h  pid_console.h  servo_control.h  task_manager.h  tca9548a.h
main/modules/audio/: README.md
main/modules/bldc/: bldc_control.cpp  bldc_task.c
main/modules/communication/: README.md
main/modules/console/: pid_console.c
main/modules/led/: led_control.c  led_task.c
main/modules/robot/: robot_task.cpp
main/modules/sensors/: README.md  USAGE_COMPARISON.md  as5600.c  cas5600.cpp  i2c_scanner.c  mpu9250.cpp  mpu9250_bridge.cpp  mpu9250_control.c  mpu9250_display_task.c  mpu9250_idf.cpp  mpu9250_task.c  robot_task.cpp  tca9548a.c  tca9548a_utils.c
main/modules/servo/: servo_control.c  servo_task.c
main/tasks/: task_manager.c
