idf_component_register(
    SRCS 
        "main.c"
        "modules/servo/servo_control.c"
        "modules/servo/servo_task.c"
        "modules/led/led_control.c"
        "modules/led/led_task.c"
        "modules/sensors/i2c_scanner.c"
        "modules/sensors/tca9548a.c"
        "modules/sensors/tca9548a_utils.c"
        "modules/sensors/cas5600.cpp"
        "modules/sensors/mpu9250_idf.cpp"
        "modules/sensors/mpu9250_bridge.cpp"
        "modules/sensors/mpu9250_control.c"
        "modules/robot/robot_task.cpp"
    "modules/console/pid_console.c"
        "tasks/task_manager.c"
    INCLUDE_DIRS 
        "include"
    REQUIRES 
        "espressif__servo"
        "espressif__led_strip"
        "espressif__i2c_bus"
        "espressif__esp_simplefoc"
        "driver"
)
